@@ -5,9 +5,9 @@ AUX uic.pro 3671 RMD160 b6d3c392a67b66f6996134975e99db03a9987baf SHA1 f87fff3725
 DIST qt-everywhere-opensource-src-4.6.0-tp1.tar.gz 146815131 RMD160 b8526a69e7b5817f32d0f3f7133bf9213c0668bf SHA1 4394bea076279ea090549d3caa00cc1f5e33a22b SHA256 9cfe0418699e231587182b441c8f6ca68f109059c62bfc8dd9daeafb8277d211
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
 EBUILD qt-core-4.5.3-r1.ebuild 6254 RMD160 64c48739b4fb31a0fca0b25595c7db4d5e9b5cab SHA1 279bf10c2832752d13339352c3e4acb7fe731317 SHA256 2823cd94d3557ce4043e09c5537747d26cd6da721cd21983538552c8e1cf4923
-EBUILD qt-core-4.5.9999.ebuild 5913 RMD160 05e3010749f97e842682628877977ff2a86efca0 SHA1 410e6fb2e001d62a1319d19d68616e0dbea71bdd SHA256 7765ac9fd77cecdc0646d9235a71e4061d82d6b9c00d9cfd8d9add9d7209cc85
-EBUILD qt-core-4.6.0_alpha_pre1-r2.ebuild 6089 RMD160 57ea5ab15984ef2c2a95887f7df457d6b753616f SHA1 3d18c1d7f5fd53f94907ac269354ace726a269ba SHA256 bf51198cbb028564c93e96676ee76b1fdd3e4fbb954bcb38c12ba2ca2b274189
+EBUILD qt-core-4.5.9999-r1.ebuild 6082 RMD160 e23c07738ac8a4abab88b27d5e2e61e3f9d8291b SHA1 2035b718a2f715b1c17f4e8481c8512b15f645fb SHA256 164857453b32924a0c74d25a1ba839f699605d45ac0f0872d1c6eb79000cf50d
+EBUILD qt-core-4.6.0_alpha_pre1-r2.ebuild 6088 RMD160 48b8faac27754c61c0bab47f9e2002bbf51b63f6 SHA1 827c2669e9c08d7874d021b1639067479762f1ad SHA256 fa7b4c6308611b3bab2fbf3ead8608165b4fc7ee99f75c4cd2d89d312923c605
 EBUILD qt-core-4.6.9999-r1.ebuild 6077 RMD160 5b2b8be7c81404c64d8fb192c67bb9f36c871226 SHA1 f43b4c4a9473075665948928a215787723599980 SHA256 54f2a630870ab6ac7154a3c205a38f6534a245059a0e1d2f63f820aa4771deed
 EBUILD qt-core-4.9999-r1.ebuild 6076 RMD160 ae0e1bf81b44cf9403b082379f382451700dfeba SHA1 c59e7d6da432754a2813d3595775124fa0bf05db SHA256 8c337dceeb2432b5ca8e0afa9278b62c20363afa413fa0f7d5e2b7a9b91370f5
-MISC ChangeLog 7441 RMD160 5b5cc41da683dc9835ecd3d08363c652fb1174b4 SHA1 f48cb1c75a6fac277410a952188289733bc42ddf SHA256 fd1166c67e9350a5682775ed845d5575f9a9267724a3ac22bb907dbdb09a3e28
+MISC ChangeLog 7669 RMD160 081b2a15cbeeea5c983d6509f7fe4c29e145758f SHA1 dfc19a78c371050ce4873646fb9c67a2b197a314 SHA256 8feeafbae34b20b7510c703fd603cdbaabb82e9bd5f2495d6abf00d954da7b77
 MISC metadata.xml 659 RMD160 0baefcd9e6256860c77e21e41731e266ad1e6b15 SHA1 40df7b57d6ab5c3e553a4b4140ac0ddf70770507 SHA256 dafab6532f4300d81216f626a8e132a81785d27e45ea10d8efb4052bcb593aed
