@@ -13,7 +13,7 @@ IUSE="doc +glib iconv optimized-qmake qt3support ssl"
 RDEPEND="sys-libs/zlib
 	glib? ( dev-libs/glib )
 	ssl? ( dev-libs/openssl )
-	!<x11-libs/qt-gui-${PV}-r3
+	!<=x11-libs/qt-gui-${PVR}
 	!<x11-libs/qt-4.4.0:4"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
