@@ -5,9 +5,9 @@ AUX libqt4-read-kde4-kdeglobals.patch 7450 RMD160 f84a5b43917ae41e5b71cfd9f8b141
 DIST qt-everywhere-opensource-src-4.6.0-tp1.tar.gz 146815131 RMD160 b8526a69e7b5817f32d0f3f7133bf9213c0668bf SHA1 4394bea076279ea090549d3caa00cc1f5e33a22b SHA256 9cfe0418699e231587182b441c8f6ca68f109059c62bfc8dd9daeafb8277d211
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
 EBUILD qt-gui-4.5.3-r1.ebuild 5907 RMD160 b309bbe8b5f8dc529a9703c43dc31387f57f25ee SHA1 23ac6e2df0ca40cc7c05f77f4546933ac25ddf5f SHA256 1a8394f6ad76403ae0d04142eefbfae59f9e8f95a44aeb77181048a61e3e4bce
-EBUILD qt-gui-4.5.9999.ebuild 5375 RMD160 7e6e4661ad649eeae7e27447486ec8e9d7975cdf SHA1 bb742e5c837890fb8b5d4829aa9909b2f74f422c SHA256 8f9dac01b6982bf9a8dcf85ec59d4fc9714af9ed7c33c70aa68d13b77609cf23
+EBUILD qt-gui-4.5.9999-r1.ebuild 5429 RMD160 0b87f6092a46ff33540f1328950618f7598a7f4c SHA1 383572f04411b660204205738769c4119e4d7e32 SHA256 6de90f4e3810d651ae14a96dce2ccfe9240a06d9c2e5ccb0a36863edcf1af1d5
 EBUILD qt-gui-4.6.0_alpha_pre1-r3.ebuild 5435 RMD160 0097f41d4360d3691d6b1cc805de8fcca758b6a6 SHA1 78e9e1db3160d1b8978fdc1a71bbd0abf607f0db SHA256 1f98b767ef8c9194dd4ba7811ed3c61b30a38d6ff511da244945033a526f0e72
 EBUILD qt-gui-4.6.9999-r1.ebuild 5392 RMD160 f7f1ca5ce15e63fb0c166619c74a6627f8264d76 SHA1 614e072ab231b29fe48df3fa78b04bc76631c54d SHA256 82e8aab363c15b8d1a55ffed266d3f185ffa63c0469064c43f975ad0aece308c
 EBUILD qt-gui-4.9999-r1.ebuild 5393 RMD160 81ae8269ef9fd7d5ad2e344b4bde6fedb9cb49dc SHA1 4e907947651957d4cc3726d68043d5fefaad3380 SHA256 274ce698e417f16089e71188585b0e3691fd6c453613a3d148328f902f7a6e63
-MISC ChangeLog 7948 RMD160 38b4a89e651a04e217d05bf01feac6da0b8c349b SHA1 d53afd60ccceb1e65562b4b799e5912f5e4b428f SHA256 62287ddebefd53c951a12a63ffd73ca9e98136a6d329720e1e0c795e0d105f5c
+MISC ChangeLog 8141 RMD160 4e8aa0d48c29a9c5fde18cf818c5bfcad5c0b4d9 SHA1 a557d84494845aa2ba0a88f62b59e44c36fb90d2 SHA256 78c9dee965faecd2e93b8d7f35cad8f2c1f4bdb387fbe111a1f878d8ea285997
 MISC metadata.xml 726 RMD160 d9da3ce6e9d6a5891849aaa197a36d8e9b0090dd SHA1 f7c74f4ff09fcdecc26a921b110bb0294ef19565 SHA256 d7ae5baabda15ee77bba48aa0dfc9de2c51d6fe45759480d0b46a6dc7fdf3291
