@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qt-gui-4.5.9999-r1 (03 Oct 2009)
+
+  03 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -qt-gui-4.5.9999.ebuild,
+  +qt-gui-4.5.9999-r1.ebuild:
+  Moved lrelease and friends to qt-core for 4.5.9999
+
 *qt-gui-4.9999-r1 (03 Oct 2009)
 *qt-gui-4.6.9999-r1 (03 Oct 2009)
 *qt-gui-4.6.0_alpha_pre1-r3 (03 Oct 2009)
